<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/back_img"
        android:scaleType="fitXY"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="@dimen/_190sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_to_agro_expert"
                android:textColor="@color/white"
                android:textSize="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:textStyle="bold"
                android:gravity="center"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_280sdp"
                android:layout_margin="@dimen/_15sdp"
                android:orientation="vertical"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:alpha="0.7"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="top">

                    <TextView
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sent_otp_to"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/tv_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="******6884"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_25sdp"
                        android:layout_gravity="center" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:gravity="center">

                        <EditText
                            android:id="@+id/edt_verify"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittextback"
                            android:hint="@string/e_otp"
                            android:textSize="@dimen/_14sdp"
                            android:paddingLeft="@dimen/_10sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:inputType="number"
                            android:paddingBottom="@dimen/_10sdp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:gravity="center">

                        <Button
                            android:id="@+id/btn_verify"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/green"
                            android:text="@string/btn_login"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14sdp"
                            android:textAllCaps="false"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_10sdp" />

                    </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resend_otp"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:textSize="@dimen/_14sdp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edt_mobile_no"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
