<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/back_img"
        android:scaleType="fitXY"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_260sdp"
                android:layout_margin="@dimen/_15sdp"
                android:orientation="vertical"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#000000"
                    android:alpha="0.7"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/login"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/_24sdp"

                        android:textStyle="bold"
                        android:gravity="center"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:text="@string/enter_mobile_number"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/_16sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:gravity="center">

                        <EditText
                            android:id="@+id/edt_phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittextback"
                            android:hint="@string/phone"
                            android:textSize="@dimen/_14sdp"
                            android:paddingLeft="@dimen/_10sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:inputType="number"
                            android:paddingBottom="@dimen/_10sdp" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:gravity="center">

                        <Button
                            android:id="@+id/btn_verify"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#8bc348"
                            android:paddingBottom="@dimen/_10sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:text="@string/sent_otp_via_sms"
                            android:textAllCaps="false"
                            android:textColor="#ffffff"
                            android:textSize="@dimen/_14sdp" />



                    </LinearLayout>


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_17sdp"
                    android:layout_marginRight="@dimen/_17sdp"
                    android:gravity="center">

                </LinearLayout>



                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
